--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 .App {
-	text-align: center;
+   text-align: center;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
