--- a/src/Components/Button.css
+++ b/src/Components/Button.css
@@ -1,5 +1,5 @@
 :root {
-    --primary: #3acbf7;
+    --primary: #1188ff;
 
 }
 
@@ -8,14 +8,20 @@
     border-radius: 4px;
     outline: none;
     border: none;
+    font-size: 18px;
     cursor: pointer;
+    color: #fff;
+    background-color: var(--primary);
 }
 .btn:hover {
-    padding: 8px 20px;
+    padding: 6px 18px;
     transition: all 0.3s ease out;
+    background-color: transparent;
+    border-radius: 4px;
+    border: 2px solid var(--primary);
     background: #fff;
     color: #6568F4;
-    transition: 250ms;
+    transition: all 0.4s ease-out;
 }
 .btn--primary {
     background-color: var(--primary);
