--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,5 +1,5 @@
 .NavbarItems {
-    background: linear-gradient(90deg, rgb(110,94,254)0%, rgba(73,63,252,1)100%);
+    background: linear-gradient(90deg, rgb(28,27,27)0%, rgba(73,63,252,1)100%);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -11,6 +11,8 @@
     justify-self: start;
     margin-left: 20px;
     cursor: pointer;
+    text-decoration: none;
+    font-size: 2rem;
 
 }
 .fa-react {
@@ -56,11 +58,11 @@
     .nav-menu {
         display: flex;
         flex-direction: column;
-        width: 100px;
-        height: 500px;
+        width: 120px;
+        height: 400px;
         position: absolute;
         top: 80px;
-        left: -100px;
+        left: -90px;
         opacity: 1;
         transition: all 0.5s ease;
 
