--- a/src/Components/style.scss
+++ b/src/Components/style.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: 2;
 
     .header {
         font-size: 30px;
@@ -34,8 +35,8 @@
                 font-size: 16px;
                 font-family: "open Sans", Arial, Helvetica, sans-serif;
                 background-color: #f3f3f3;
-                border: 0;
-                border-radius: 4px;
+                border: none;
+                border-radius: 0px;
                 margin-bottom: 30px;
                 transition: all250ms ease-in-out;
                 &:focus{
@@ -52,7 +53,7 @@
 .btn {
     font-size: 21px;
     padding: 5px 20px;
-    border: 0;
+    border: none;
     background-color: #3498db;
     color: #fff;
     border-radius: 3px;
