--- a/src/Components/User/ProfilePage.css
+++ b/src/Components/User/ProfilePage.css
@@ -52,7 +52,7 @@ body {
 }
 
 .card {
-    background: #ffffff;
+    background: lightblue;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
