--- a/src/background.css
+++ b/src/background.css
@@ -46,6 +46,17 @@
 	left: 0;
 }
 
+.forum {
+	background: linear-gradient(-45deg, #17d784, #fad96c, #7ac4fd, #ffa0a0);
+	background-size: 400% 400%;
+	animation: gradient 30s ease-in-out infinite;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	top: 0;
+	left: 0;
+}
+
 .gifStyle {
 	/*background-image: url('https://acegif.com/wp-content/gifs/water-11.gif');
 	background-size: fit;*/
